# irods_client_cli

./: .gitignore  CMakeLists.txt  README.md
commands/cp/: CMakeLists.txt  main.cpp
commands/get/: CMakeLists.txt
commands/ls/: CMakeLists.txt
commands/put/: CMakeLists.txt  main.cpp
commands/repl/: CMakeLists.txt  main.cpp
commands/rm/: CMakeLists.txt  main.cpp
commands/touch/: CMakeLists.txt
include/: command.hpp  get.hpp  put.hpp  touch.hpp
src/: get.cpp  main.cpp  put.cpp  touch.cpp
subcommands/get/: CMakeLists.txt  main.cpp
subcommands/ls/: CMakeLists.txt  main.cpp
subcommands/put/: CMakeLists.txt  main.cpp
subcommands/touch/: CMakeLists.txt  main.cpp
